
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarMain"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black">


        <LinearLayout
            android:id="@+id/back_menu_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:src="@drawable/c_logo_1" />

            <TextView
                android:id="@+id/title"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/logo_name"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarMain"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_Ind"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/food_png_27" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="40dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans_condensed_bold"
                            android:text="@string/cuis_ind"
                            android:textColor="@color/black"
                            android:textSize="30dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_Ita"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/food_png_21" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="40dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans_condensed_bold"
                            android:text="@string/cuis_ita"
                            android:textColor="@color/black"
                            android:textSize="30dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_Sea"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/food_png_8" />

                        <TextView
                            android:id="@+id/textVie3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="40dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans_condensed_bold"
                            android:text="@string/cuis_sea"
                            android:textColor="@color/black"
                            android:textSize="30dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_Fas"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="147dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/food_png_15" />

                        <TextView
                            android:id="@+id/textVie4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="40dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans_condensed_bold"
                            android:text="@string/cuis_fas"
                            android:textColor="@color/black"
                            android:textSize="30dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/abt_us_ttl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="About Us"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/About_Comiento_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Comiento was established in 1998 at the heart of Canada as a one-stop for all types of food, including Indian cuisine, authentic Thai cuisine, and Italian delicacy, among other dishes. Over the years, we have developed ourselves as the world's one of the best destinations serving delicious food. People from all around the world come to our place to enjoy Eclectic food. At Comiento, we know that life is better together and everyone is happiest when they're with family. From never-ending servings of our fresh food and iconic garden salad to our homemade soups and sauces, there's something for everyone to enjoy. Be a part of the Comiento community and connect with us to stay up-to-date, share your stories and join the conversation. " />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>